Estilos al gestor de tarea

--- a/taller1/index.html
+++ b/taller1/index.html
@@ -8,10 +8,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div>
     <h1>Gestor de Tareas</h1>
     <input type="text" id="taskInput" placeholder="Nueva tarea...">
     <button id="addTaskBtn">Agregar Tarea</button>
      <ul id="taskList"></ul>  
-     
+    </div>
 </body>
 </html>
